[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/level_selection_ui.gd" type="Script" id=1]
[ext_resource path="res://sources/images/sprite_tabletop.png" type="Texture" id=2]
[ext_resource path="res://sources/images/sprite_player_characters/sprite_character_buttons/sprite_character_buttons1.png" type="Texture" id=3]
[ext_resource path="res://sources/images/sprite_player_characters/sprite_character_buttons/sprite_character_buttons3.png" type="Texture" id=4]
[ext_resource path="res://sources/images/sprite_player_characters/sprite_character_buttons/sprite_character_buttons5.png" type="Texture" id=5]
[ext_resource path="res://sources/images/sprite_temp_players/sprite_basic_character/sprite_playrchar01.png" type="Texture" id=6]
[ext_resource path="res://sources/images/sprite_temp_players/sprite_basic_character/sprite_playrchar03.png" type="Texture" id=7]
[ext_resource path="res://sources/images/sprite_temp_players/sprite_basic_character/sprite_playrchar11.png" type="Texture" id=8]

[node name="MainUI" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="VerticalContainer" type="VBoxContainer" parent="MarginContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
alignment = 0

[node name="Level Title" type="HBoxContainer" parent="MarginContainer/VerticalContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 1016.0
margin/bottom = 149.0
alignment = 1

[node name="TextureFrame" type="TextureFrame" parent="MarginContainer/VerticalContainer/Level Title"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1016.0
margin/bottom = 149.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="CharSelection" type="HBoxContainer" parent="MarginContainer/VerticalContainer"]

rect/min_size = Vector2( 1016, 447 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
size_flags/stretch_ratio = 3.0
margin/left = 0.0
margin/top = 153.0
margin/right = 1016.0
margin/bottom = 600.0
alignment = 1

[node name="HackerContainer" type="HBoxContainer" parent="MarginContainer/VerticalContainer/CharSelection"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 336.0
margin/bottom = 447.0
alignment = 1

[node name="Hacker" type="TextureButton" parent="MarginContainer/VerticalContainer/CharSelection/HackerContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 336.0
margin/bottom = 447.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="SniperContainer" type="HBoxContainer" parent="MarginContainer/VerticalContainer/CharSelection"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 340.0
margin/top = 0.0
margin/right = 676.0
margin/bottom = 447.0
alignment = 1

[node name="Sniper" type="TextureButton" parent="MarginContainer/VerticalContainer/CharSelection/SniperContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 336.0
margin/bottom = 447.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="InfantryContainer" type="HBoxContainer" parent="MarginContainer/VerticalContainer/CharSelection"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 680.0
margin/top = 0.0
margin/right = 1016.0
margin/bottom = 447.0
alignment = 1

[node name="Infantry" type="TextureButton" parent="MarginContainer/VerticalContainer/CharSelection/InfantryContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 336.0
margin/bottom = 447.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="LevelSelection" type="HBoxContainer" parent="MarginContainer/VerticalContainer"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
size_flags/stretch_ratio = 3.0
margin/left = 0.0
margin/top = 491.0
margin/right = 1016.0
margin/bottom = 600.0
alignment = 1

[node name="Level 1 Container" type="HBoxContainer" parent="MarginContainer/VerticalContainer/LevelSelection"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 336.0
margin/bottom = 109.0
alignment = 0

[node name="Level 1" type="TextureButton" parent="MarginContainer/VerticalContainer/LevelSelection/Level 1 Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 336.0
margin/bottom = 109.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="Level 2 Container" type="HBoxContainer" parent="MarginContainer/VerticalContainer/LevelSelection"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 340.0
margin/top = 0.0
margin/right = 676.0
margin/bottom = 109.0
alignment = 0

[node name="Level 2" type="TextureButton" parent="MarginContainer/VerticalContainer/LevelSelection/Level 2 Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 336.0
margin/bottom = 109.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="Level 3 Container" type="HBoxContainer" parent="MarginContainer/VerticalContainer/LevelSelection"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 680.0
margin/top = 0.0
margin/right = 1016.0
margin/bottom = 109.0
alignment = 0

[node name="Level 3" type="TextureButton" parent="MarginContainer/VerticalContainer/LevelSelection/Level 3 Container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 336.0
margin/bottom = 109.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
params/resize_mode = 1
params/stretch_mode = 0

[connection signal="pressed" from="MarginContainer/VerticalContainer/CharSelection/HackerContainer/Hacker" to="." method="_on_hacker_pressed"]

[connection signal="pressed" from="MarginContainer/VerticalContainer/CharSelection/SniperContainer/Sniper" to="." method="_on_sniper_pressed"]

[connection signal="pressed" from="MarginContainer/VerticalContainer/CharSelection/InfantryContainer/Infantry" to="." method="_on_infantry_pressed"]

[connection signal="pressed" from="MarginContainer/VerticalContainer/LevelSelection/Level 1 Container/Level 1" to="." method="_on_level_1_pressed"]

[connection signal="pressed" from="MarginContainer/VerticalContainer/LevelSelection/Level 2 Container/Level 2" to="." method="_on_level_2_pressed"]

[connection signal="pressed" from="MarginContainer/VerticalContainer/LevelSelection/Level 3 Container/Level 3" to="." method="_on_level_3_pressed"]


